# encoding-cli

./: .gitignore  README.md  pyproject.toml  sample_utf8.txt
src/encoding_cli/: cli.py  convert.py  detect.py  verify.py
tests/: test_convert.py  test_detect.py  test_verify.py
