[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encoding-cli"
version = "0.1.0"
description = "CLI tool for converting pseudo-GB2312/GB18030 streams and UTF-8."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Claude Code" }
]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
encoding-cli = "encoding_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/encoding_cli"]
